<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="ingredient"
            type="String" />
    </data>
    <android.support.v7.widget.CardView
        style="?attr/cardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        app:cardCornerRadius="5dp">

        <TextView
            android:id="@+id/text_ingredient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@{ingredient}"
            android:textAppearance="@android:style/TextAppearance.Material.Menu"
            tools:text="@sample/tools:lorem" />

    </android.support.v7.widget.CardView>
</layout>