...
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.StepFragment">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="0dp"
            android:visibility="gone"
            app:fastforward_increment="1000"
            app:rewind_increment="1000"
...
